--- a/styles/main.css
+++ b/styles/main.css
@@ -22,7 +22,7 @@ header .container {
 .logo {
     color: var(--vermelho);
     font-family: arial black, times;
-    font-size: 40px;
+    font-size: 30px;
     margin-left: 6px;
 }
 header nav a {
@@ -38,7 +38,7 @@ header nav a:hover {
 
 .filme-principal {
     font-size: 16px;
-    background:  linear-gradient(rgba(0,0,0, .50), rgba(0, 0, 0, .50)100%), url(../img/Vikings.jpg);
+    /* background:  linear-gradient(rgba(0,0,0, .50), rgba(0, 0, 0, .50)100%), url(../img/Vikings.jpg); */
 
     height: 500px;
     background-size: cover;
@@ -47,6 +47,11 @@ header nav a:hover {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+}
+#trailer {
+    z-index: -9;
+    width: 100%;
+    position: absolute;
 }
 .container {
     margin-left: 15px;
@@ -76,6 +81,10 @@ header nav a:hover {
     cursor: pointer;
     transition:  .3s ease;
 }
+.botao a {
+    text-decoration: none;
+    color: white;
+}
 .btn-1 {
     background-color: #fff;
 }
@@ -90,12 +99,13 @@ header nav a:hover {
 /*Imagens owl*/
 
 .item .box-filme {
-    height: 100%;
-    width: 100%;
+    height: 10%;
+    width: 80%;
     display: block;
     margin-top: 20px;
     border-radius: 4px;
     transition: all .3s ease;
+    margin: 10px 0px;
 }
 .item .box-filme:hover {
     margin-top: 8px;
@@ -112,4 +122,18 @@ header nav a:hover {
 
 .carousel-filme {
     margin-top: 15px;
+}
+footer {
+    height: 200px;
+    display: flex;
+    color: #fff;
+    justify-content: space-around;
+    margin-top: 4em;
+    font-size: 1.2em;
+}
+footer ul {
+    list-style: none;
+}
+footer li {
+    line-height: 1.7em;
 }
